force-app/main/default/objects/leaseworks__Projected_Event_Snapshot__c/leaseworks__Projected_Event_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Projected Event Snapshot</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProjectedEventSnapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>