force-app/main/default/objects/leaseworks__Projected_Event_Snapshot__c/fields/leaseworks__Event_Due_Date_Calculated__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Event_Due_Date_Calculated__c</fullName>
    <inlineHelpText>Event Last Date + Interval, when assembly event available (second run)
Event Last Date + Threshold, when assembly event not available (first run)</inlineHelpText>
    <label>Event Due Date Calculated</label>
    <type>Date</type>
</CustomField>