force-app/main/default/objects/leaseworks__Projected_Event_Snapshot__c/fields/leaseworks__Event_Due_TSN_Override__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Event_Due_TSN_Override__c</fullName>
    <inlineHelpText>Enter your data if you want to override calculated by the system</inlineHelpText>
    <label>Event Due TSN Override</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>