force-app/main/default/objects/leaseworks__Projected_Event_Snapshot__c/fields/leaseworks__Event_Override_Source__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Event_Override_Source__c</fullName>
    <inlineHelpText>What is the source of override data</inlineHelpText>
    <label>Event Override Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operator</fullName>
            </value>
            <value>
                <fullName>External Consultancy</fullName>
            </value>
            <value>
                <fullName>Internal Expertise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>