force-app/main/default/objects/leaseworks__Projected_Event_Snapshot__c/fields/leaseworks__Interval_1_Hours__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Interval_1_Hours__c</fullName>
    <label>Threshold (Hours)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>