force-app/main/default/objects/leaseworks__Projected_Event_Snapshot__c/fields/leaseworks__Interval_2_Cycles__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Interval_2_Cycles__c</fullName>
    <label>Interval (Cycles)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>