force-app/main/default/objects/leaseworks__Projected_Event_Snapshot__c/fields/leaseworks__Last_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Last_Event_Date__c</fullName>
    <label>Event Last Date</label>
    <type>Date</type>
</CustomField>