force-app/main/default/objects/leaseworks__Projected_Event_Snapshot__c/fields/leaseworks__Last_Utilization_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Last_Utilization_Date__c</fullName>
    <inlineHelpText>Latest Utilization Date</inlineHelpText>
    <label>Last Utilization Date</label>
    <type>Date</type>
</CustomField>