force-app/main/default/objects/leaseworks__Projected_Event_Snapshot__c/fields/leaseworks__Life_Remaining_Hours__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Life_Remaining_Hours__c</fullName>
    <label>% Life Remaining - Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>