force-app/main/default/objects/leaseworks__Projected_Event_Snapshot__c/fields/leaseworks__Maintenance_Program_Event__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maintenance_Program_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maintenance Program Event</label>
    <referenceTo>leaseworks__Maintenance_Program_Event__c</referenceTo>
    <relationshipLabel>ProjectedEventSnapshots</relationshipLabel>
    <relationshipName>ProjectedEventSnapshots</relationshipName>
    <type>Lookup</type>
</CustomField>