force-app/main/default/objects/leaseworks__Projected_Event_Snapshot__c/fields/leaseworks__Projected_Event__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Projected_Event__c</fullName>
    <label>Projected Event</label>
    <referenceTo>leaseworks__Assembly_Event_Info__c</referenceTo>
    <relationshipLabel>Projected Event Snapshots</relationshipLabel>
    <relationshipName>ProjectedEventSnapshots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>