force-app/main/default/objects/leaseworks__Projected_Event_Snapshot__c/fields/leaseworks__Since_Last_Months__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Since_Last_Months__c</fullName>
    <label>Since Last - Months</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>