force-app/main/default/objects/leaseworks__Projected_Event_Snapshot__c/fields/leaseworks__To_Go_Months__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__To_Go_Months__c</fullName>
    <inlineHelpText>Difference between Next Due and Last accomplishment</inlineHelpText>
    <label>To Go - Months</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>