force-app/main/default/objects/leaseworks__Projected_Event_Snapshot__c/fields/leaseworks__Y_Hidden_Event_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Event_Due_Date__c</fullName>
    <label>_Event Due Date</label>
    <type>Date</type>
</CustomField>