force-app/main/default/objects/leaseworks__Projected_Event_Snapshot__c/fields/leaseworks__Y_Hidden_Event_Due_Override__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Event_Due_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>_Event Due Override</label>
    <type>Checkbox</type>
</CustomField>