force-app/main/default/objects/leaseworks__Projected_Event_Snapshot__c/fields/leaseworks__Y_Hidden_Event_Due_TSN_Calculated__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Event_Due_TSN_Calculated__c</fullName>
    <label>_Event Due TSN Calculated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>