force-app/main/default/objects/leaseworks__Projected_Event_Snapshot__c/fields/leaseworks__Y_Hidden_To_Go_Months__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_To_Go_Months__c</fullName>
    <label>_To Go Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>